added basics solutions

--- a/01a_python_basics.ipynb
+++ b/01a_python_basics.ipynb
@@ -584,7 +584,11 @@
     "# Berechnung und Anzeige der Multiplikationstabelle\n",
     "print(f\"Multiplikationstabelle für 1 bis {n}:\")\n",
     "\n",
-    "pass # ergänzen Sie hier Ihren Code"
+    "for i in range(1,n+1):\n",
+    "    for j in range(1,n+1):\n",
+    "        z = i*j\n",
+    "        print(f\"{z:4}\", end=\"\")\n",
+    "    print()"
    ]
   },
   {
@@ -623,7 +627,16 @@
     "n = 30\n",
     "\n",
     "# Zählen und Bedingungsprüfung\n",
-    "pass"
+    "for i in range(1,n+1):\n",
+    "    if (i % 15) == 0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif (i % 3) == 0:\n",
+    "        print(\"Fizz\")\n",
+    "        continue\n",
+    "    elif (i % 5) == 0:\n",
+    "        print(\"Buzz\")\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -658,7 +671,12 @@
     "# Primzahlprüfung und Anzeige\n",
     "print(f\"Primzahlen zwischen 1 und {n}:\")\n",
     "\n",
-    "pass\n"
+    "for zahl in range(1,n):\n",
+    "    for i in range(2, int(zahl ** 0.5) + 1):  # Bis zur Quadratwurzel der Zahl prüfen\n",
+    "        if zahl % i == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(zahl)\n"
    ]
   }
  ],
