--- a/01b_python_basics.ipynb
+++ b/01b_python_basics.ipynb
@@ -289,12 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_premium(): # Übergabeparameter nicht vergessen\n",
-    "    pass "
+    "def calculate_premium(sum_insured, risk_factor, base_premium): # Übergabeparameter nicht vergessen\n",
+    "    return sum_insured * risk_factor * base_premium"
    ]
   },
   {
@@ -329,12 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_claim():\n",
-    "    pass"
+    "def evaluate_claim(claim_amount, deductible):\n",
+    "    return (max(0, claim_amount - deductible))"
    ]
   },
   {
@@ -376,12 +376,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def adjust_premium_for_age(base_premium, age):\n",
-    "    pass "
+    "    if age < 25:\n",
+    "        premium = base_premium * 1.5\n",
+    "    elif age >= 25 and age < 50:\n",
+    "        premium = base_premium\n",
+    "    else:\n",
+    "        premium = base_premium * 0.8\n",
+    "\n",
+    "    return premium"
    ]
   },
   {
@@ -392,8 +399,8 @@
    "source": [
     "# Code zum Testen\n",
     "print(adjust_premium_for_age(100,23)) # 150\n",
-    "print(adjust_premium_for_age(100,50)) # 100\n",
-    "print(adjust_premium_for_age(100,51)) # 80"
+    "print(adjust_premium_for_age(100,49)) # 100\n",
+    "print(adjust_premium_for_age(100,50)) # 80"
    ]
   },
   {
