solutions objects added

--- a/02c_python_files.ipynb
+++ b/02c_python_files.ipynb
@@ -54,7 +54,12 @@
    "outputs": [],
    "source": [
     "# Öffnen einer Datei im Schreibmodus ('w')\n",
-    "pass\n"
+    "# Daten, die wir in die Datei schreiben möchten\n",
+    "daten = \"Dies ist ein Beispieltext für die Datei.\\nHier ist eine neue Zeile.\"\n",
+    "\n",
+    "# Öffnen der Datei zum Schreiben\n",
+    "with open(\"ausgabe.txt\", \"w\") as datei:\n",
+    "    datei.write(daten)\n"
    ]
   },
   {
@@ -72,7 +77,10 @@
    "outputs": [],
    "source": [
     "# Öffnen der Datei und zeilenweises Lesen\n",
-    "pass\n"
+    "# Öffnen der Datei zum Lesen\n",
+    "with open(\"ausgabe.txt\", \"r\") as datei:\n",
+    "    for zeile in datei:\n",
+    "        print(zeile) \n"
    ]
   },
   {
@@ -86,12 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Schreiben im Ordner images\n",
-    "pass"
+    "# Öffnen einer Datei im Schreibmodus ('w')\n",
+    "# Daten, die wir in die Datei schreiben möchten\n",
+    "daten = \"Dies ist ein Beispieltext für eine andere Datei.\\nHier ist eine neue Zeile.\"\n",
+    "\n",
+    "# Öffnen der Datei zum Schreiben\n",
+    "with open(\"./images/ausgabe.txt\", \"w\") as datei:\n",
+    "    datei.write(daten)"
    ]
   },
   {
@@ -100,7 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lesen aus dem Ordner images\n"
+    "# lesen aus dem Ordner images\n",
+    "with open(\"./images/ausgabe.txt\", \"r\") as datei:\n",
+    "    for zeile in datei:\n",
+    "        print(zeile) "
    ]
   }
  ],
