--- a/02a_python_object.ipynb
+++ b/02a_python_object.ipynb
@@ -148,16 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Versicherungsnehmer:\n",
     "    def __init__(self, name, geburtsdatum, adresse, versicherungsnummer):\n",
-    "         pass\n",
+    "         self.name = name\n",
+    "         self.geburtsdatum = geburtsdatum\n",
+    "         self.adresse = adresse\n",
+    "         self.versicherungsnummer = versicherungsnummer\n",
     "\n",
     "    def vertragsdetails_anzeigen(self):\n",
-    "        pass\n"
+    "        print(f\"Versicherungsnehmer: {self.name}\")\n",
+    "        print(f\"Geburtsdatum: {self.geburtsdatum}\")\n",
+    "        print(f\"Adresse: {self.adresse}\")\n",
+    "        print(f\"Versicherungsnummer: {self.versicherungsnummer}\")\n"
    ]
   },
   {
@@ -214,12 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person():\n",
-    "    pass"
+    "    def __init__(self, pName, pGeburtsdatum, pAdresse) -> None:\n",
+    "        self.name = pName\n",
+    "        self.geburtsdatum = pGeburtsdatum\n",
+    "        self.adresse = pAdresse\n"
    ]
   },
   {
@@ -231,11 +240,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Versicherungsnehmer(Person): # das wars schon, einfach die Klasse in Klammern packen, zack schon geerbt.\n",
+    "    def __init__(self, pName, pGeburtsdatum, pAdresse, pVersicherungsnummer) -> None:\n",
+    "        super().__init__(pName, pGeburtsdatum, pAdresse)\n",
+    "        self.versicherungsnummer = pVersicherungsnummer\n",
+    "\n",
+    "    def anzeigen(self):\n",
+    "        print(f\"Versicherungsnehmer: {self.name}\")\n",
+    "        print(f\"Geburtsdatum: {self.geburtsdatum}\")\n",
+    "        print(f\"Adresse: {self.adresse}\")\n",
+    "        print(f\"Versicherungsnummer: {self.versicherungsnummer}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Versicherungsnehmer(Person): # das wars schon, einfach die Klasse in Klammern packen, zack schon geerbt."
+    "# probieren wir es mal aus: \n",
+    "kunde = Versicherungsnehmer(\"Max Mustermann\", \"01.01.1980\", \"Musterstraße 1\", \"123456789\")\n",
+    "kunde.anzeigen()"
    ]
   },
   {
@@ -285,16 +314,24 @@
     "        print(f\"Adresse: {self.adresse}\")\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        pass\n",
+    "        # Gibt eine benutzerfreundliche Beschreibung der Person zurück\n",
+    "        return f\"Person(Name: {self.name}, Geburtsdatum: {self.geburtsdatum}, Adresse: {self.adresse})\"\n",
     "\n",
     "    def __repr__(self) -> str:\n",
-    "        pass\n",
+    "        # Gibt eine detaillierte, \"technische\" Beschreibung zurück, die für Entwickler nützlich ist\n",
+    "        return f\"Person(name={self.name!r}, geburtsdatum={self.geburtsdatum!r}, adresse={self.adresse!r})\"\n",
     "\n",
-    "    def __eq__(self, value: object) -> bool:\n",
-    "        pass\n",
+    "    def __eq__(self, other: object) -> bool:\n",
+    "        # Überprüft, ob zwei Personen-Objekte gleich sind (gleicher Name, Geburtsdatum und Adresse)\n",
+    "        if isinstance(other, Person):\n",
+    "            return (self.name == other.name and \n",
+    "                    self.geburtsdatum == other.geburtsdatum and \n",
+    "                    self.adresse == other.adresse)\n",
+    "        return False\n",
     "\n",
     "    def __hash__(self) -> int:\n",
-    "        pass"
+    "        # Erzeugt einen Hash-Wert basierend auf Name, Geburtsdatum und Adresse\n",
+    "        return hash((self.name, self.geburtsdatum, self.adresse))\n"
    ]
   },
   {
@@ -309,19 +346,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Shape:\n",
     "    def __init__(self, name):\n",
-    "        pass\n",
-    "    \n",
-    "    # Methode area\n",
+    "        self.name = name\n",
     "\n",
-    "    # repr\n",
+    "    def area(self):\n",
+    "        # Gibt an, dass die Flächenberechnung noch nicht implementiert ist\n",
+    "        return \"not yet implemented\"\n",
     "\n",
-    "    # str"
+    "    def __repr__(self):\n",
+    "        # Gibt eine detaillierte, technische Beschreibung zurück\n",
+    "        return f\"Shape(name={self.name!r})\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        # Gibt eine benutzerfreundliche Beschreibung der Form zurück\n",
+    "        return f\"Shape: {self.name}\"\n"
    ]
   },
   {
@@ -337,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,13 +388,26 @@
     "\n",
     "class Circle(Shape):\n",
     "    def __init__(self, radius):\n",
-    "        pass\n",
-    "    \n",
+    "        super().__init__(\"Circle\")  # Setzt den Namen der Form auf \"Circle\"\n",
+    "        self.radius = radius\n",
+    "\n",
     "    def area(self):\n",
-    "        pass\n",
+    "        # Berechnet die Fläche des Kreises\n",
+    "        return math.pi * (self.radius ** 2)\n",
     "\n",
     "    def __eq__(self, otherCircle):\n",
-    "        pass"
+    "        # Vergleicht, ob zwei Kreise gleich sind (gleicher Radius)\n",
+    "        if isinstance(otherCircle, Circle):\n",
+    "            return self.radius == otherCircle.radius\n",
+    "        return NotImplemented\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        # Gibt eine detaillierte, technische Beschreibung zurück\n",
+    "        return f\"Circle(radius={self.radius!r})\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        # Gibt eine benutzerfreundliche Beschreibung des Kreises zurück\n",
+    "        return f\"Circle with radius: {self.radius}\"\n"
    ]
   },
   {
@@ -366,8 +422,8 @@
     "print(circle.area())  # Ausgabe: 78.53981633974483\n",
     "circle2 = Circle(6)\n",
     "circle3 = Circle(5)\n",
-    "print(circle == circle2)\n",
-    "print(circle == circle3)"
+    "print(circle == circle2) # False\n",
+    "print(circle == circle3) # True"
    ]
   },
   {
@@ -381,16 +437,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Rectangle(Shape):\n",
     "    def __init__(self, width, height):\n",
-    "        pass\n",
-    "    \n",
+    "        super().__init__(\"Rectangle\")  # Setzt den Namen der Form auf \"Rectangle\"\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
     "    def area(self):\n",
-    "        pass"
+    "        # Berechnet die Fläche des Rechtecks\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        # Gibt eine detaillierte, technische Beschreibung zurück\n",
+    "        return f\"Rectangle(width={self.width!r}, height={self.height!r})\"\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        # Gibt eine benutzerfreundliche Beschreibung des Rechtecks zurück\n",
+    "        return f\"Rectangle with width: {self.width} and height: {self.height}\"\n",
+    "\n",
+    "    def __eq__(self, otherRectangle):\n",
+    "        # Vergleicht, ob zwei Rechtecke gleich sind (gleiche Breite und Höhe)\n",
+    "        if isinstance(otherRectangle, Rectangle):\n",
+    "            return self.width == otherRectangle.width and self.height == otherRectangle.height\n",
+    "        return NotImplemented\n"
    ]
   },
   {
@@ -403,8 +476,8 @@
     "rectangle = Rectangle(3, 5)\n",
     "print(rectangle.name)  # Ausgabe: Rectangle\n",
     "print(rectangle.area())  # Ausgabe: 15\n",
-    "print(repr(rectangle))  # Ausgabe: Rectangle('Rectangle')\n",
-    "print(str(rectangle))   # Ausgabe: RECTANGLE"
+    "print(repr(rectangle))  # Ausgabe: Rectangle(width=3, height=5)\n",
+    "print(str(rectangle))   # Ausgabe: Rectangle with width: 3 and height: 5"
    ]
   },
   {
@@ -418,15 +491,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Square(Rectangle):\n",
     "    def __init__(self, side_length):\n",
-    "        pass\n",
+    "        super().__init__(side_length, side_length)  # Setzt die Breite und Höhe gleich der Seitenlänge\n",
+    "        self.name = \"Square\"  # Setzt den Namen der Form auf \"Square\"\n",
+    "\n",
+    "    def area(self):\n",
+    "        # Berechnet die Fläche des Quadrats\n",
+    "        return self.width * self.width  # Oder self.height * self.height\n",
+    "\n",
     "    def __eq__(self, otherSquare):\n",
-    "        pass"
+    "        # Vergleicht, ob zwei Quadrate gleich sind (gleiche Seitenlänge)\n",
+    "        if isinstance(otherSquare, Square):\n",
+    "            return self.width == otherSquare.width  # Oder self.height\n",
+    "        return NotImplemented\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        # Gibt eine benutzerfreundliche Beschreibung des Quadrats zurück\n",
+    "        return f\"Square with side length: {self.width}\"  # Selbst width und height sind gleich\n"
    ]
   },
   {
