--- a/02b_python_objects.ipynb
+++ b/02b_python_objects.ipynb
@@ -718,10 +718,17 @@
     "text = \"Eine Horde bedrohe nie\"\n",
     "\n",
     "# Palindrom-Überprüfung\n",
-    "ist_palindrom = False\n",
-    "pass\n",
+    "# 1. Alle Zeichen in Kleinbuchstaben umwandeln\n",
+    "# 2. Leerzeichen entfernen\n",
+    "# 3. Den bearbeiteten String mit seiner Umkehrung vergleichen\n",
     "\n",
-    "print(f\"'{text}' ist ein Palindrom: {ist_palindrom}\")"
+    "# Normalisieren des Textes: in Kleinbuchstaben und Leerzeichen entfernen\n",
+    "normalized_text = ''.join(text.lower().split())\n",
+    "\n",
+    "# Überprüfen, ob der normalisierte Text ein Palindrom ist\n",
+    "ist_palindrom = normalized_text == normalized_text[::-1]\n",
+    "\n",
+    "print(f\"'{text}' ist ein Palindrom: {ist_palindrom}\")\n"
    ]
   },
   {
@@ -744,7 +751,7 @@
     "end = 10\n",
     "\n",
     "# Quadratzahlen berechnen\n",
-    "quadratzahlen = None # hier eine geeignete List Comprehension ergänzen\n",
+    "quadratzahlen = [x**2 for x in range(start, end + 1)]\n",
     "\n",
     "print(quadratzahlen)\n"
    ]
@@ -763,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdg_words = None # hier geeignet ergänzen\n",
+    "pdg_words = pdg_text.lower().split()\n",
     "len(pdg_words)"
    ]
   },
@@ -820,7 +827,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdg_words_unique = None\n",
+    "pdg_words_unique = set(pdg_words)\n",
     "len(pdg_words_unique)"
    ]
   },
@@ -833,14 +840,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "pdg_word_count = {}\n",
     "\n",
     "for word in pdg_words:\n",
-    "    pass \n"
+    "    if word in pdg_word_count:\n",
+    "        pdg_word_count[word] += 1\n",
+    "    else:\n",
+    "        pdg_word_count[word] = 1\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -880,8 +892,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
