solutions pandas added

--- a/03_python_pandas.ipynb
+++ b/03_python_pandas.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,11 +653,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ergänzen Sie nach Bedarf Code-Zeilen"
+    "# Erstelle ein DataFrame\n",
+    "df = pd.DataFrame(daten)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hohe_schaeden = df[df['Schadenshöhe'] > 2000]\n",
+    "print(hohe_schaeden)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vertragsdauer in Tagen bis zum Schadensdatum berechnen\n",
+    "df['Vertragsdauer'] = (df['Schadensdatum'] - df['Versicherungsbeginn']).dt.days\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "durchschnittliche_schadenshoehe = df['Schadenshöhe'].mean()\n",
+    "print(f\"Durchschnittliche Schadenshöhe: {durchschnittliche_schadenshoehe}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gruppieren der Schadenshöhe nach Region\n",
+    "region_grouped = df.groupby('Region')['Schadenshöhe'].agg(['sum', 'mean']).reset_index()\n",
+    "print(\"Schadenhöhe nach Region (Summe und Durchschnitt):\")\n",
+    "print(region_grouped)\n"
    ]
   },
   {
@@ -707,7 +770,7 @@
    "outputs": [],
    "source": [
     "# Pivot-Tabelle erstellen, die den Mittelwert der Schadenshöhen nach Region zeigt\n",
-    "schaden_pivot = schaden_daten.pivot_table(values='Schadenshöhe', index='Region', aggfunc='mean')\n",
+    "schaden_pivot = df.pivot_table(values='Schadenshöhe', index='Region', aggfunc='mean')\n",
     "schaden_pivot"
    ]
   },
@@ -868,37 +931,173 @@
     "- **Aufgabe**: Lesen Sie den Datensatz ein und verschaffen Sie sich einen Überblick.\n",
     "  - Verwenden Sie `head()`, um sich die ersten 5 Zeilen des Datensatzes anzusehen.\n",
     "  - Nutzen Sie `info()`, um Informationen über die Datentypen und die Anzahl der Einträge zu erhalten.\n",
-    "  - Zeigen Sie eine Zusammenfassung der numerischen Spalten mit `describe()`.\n",
-    "\n",
+    "  - Zeigen Sie eine Zusammenfassung der numerischen Spalten mit `describe()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schaden_df  = pd.read_csv(\"./data/car_insurance_claims.csv\")\n",
+    "schaden_df.head()\n",
+    "schaden_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Spaltenzugriff und einfache Berechnungen\n",
     "- **Aufgabe**: Arbeiten Sie mit einzelnen Spalten.\n",
     "  - Zeigen Sie die durchschnittliche Höhe der `total_claim_amount` (Gesamtforderung).\n",
     "  - Finden Sie den maximalen und minimalen Wert für die Spalte `policy_annual_premium` (Jahresprämie).\n",
-    "  - Erstellen Sie eine neue Spalte `claim_ratio`, die den Anteil des `total_claim_amount` an der `policy_annual_premium` berechnet.\n",
-    "\n",
+    "  - Erstellen Sie eine neue Spalte `claim_ratio`, die den Anteil der `policy_annual_premium` am `total_claim_amount` berechnet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_claim_amount = schaden_df['total_claim_amount'].mean()\n",
+    "print(f'Durchschnittliche Höhe der Gesamtforderung: {average_claim_amount}')\n",
+    "max_premium = schaden_df['policy_annual_premium'].max()\n",
+    "min_premium = schaden_df['policy_annual_premium'].min()\n",
+    "print(f'Maximale Jahresprämie: {max_premium}')\n",
+    "print(f'Minimale Jahresprämie: {min_premium}')\n",
+    "schaden_df['claim_ratio'] = schaden_df['policy_annual_premium'] / schaden_df['total_claim_amount'] \n",
+    "print(schaden_df[['total_claim_amount', 'policy_annual_premium', 'claim_ratio']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. Filtern von Daten\n",
     "- **Aufgabe**: Filtern Sie den Datensatz nach bestimmten Bedingungen.\n",
     "  - Finden Sie alle Fälle, bei denen das `incident_type` (Schadenart) als \"Single Vehicle Collision\" gemeldet wurde.\n",
     "  - Zeigen Sie alle Vorfälle an, die im Bundesstaat \"NY\" (`incident_state`) stattgefunden haben und bei denen die Schadenshöhe (`total_claim_amount`) über 10.000 liegt.\n",
-    "  - Finden Sie alle Vorfälle, bei denen mehr als 2 Zeugen (`witnesses`) angegeben wurden.\n",
-    "\n",
+    "  - Finden Sie alle Vorfälle, bei denen mehr als 2 Zeugen (`witnesses`) angegeben wurden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_vehicle_collisions = schaden_df[schaden_df['incident_type'] == 'Single Vehicle Collision']\n",
+    "print(single_vehicle_collisions.head())\n",
+    "ny_high_claims = schaden_df[(schaden_df['incident_state'] == 'NY') & (schaden_df['total_claim_amount'] > 10000)]\n",
+    "print(ny_high_claims.head())\n",
+    "more_than_two_witnesses = schaden_df[schaden_df['witnesses'] > 2]\n",
+    "print(more_than_two_witnesses.head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Gruppieren und Aggregieren\n",
     "- **Aufgabe**: Gruppieren Sie Daten und berechnen Sie Durchschnittswerte.\n",
     "  - Gruppieren Sie die Daten nach dem `incident_state` und zeigen Sie die durchschnittliche `total_claim_amount` für jeden Bundesstaat.\n",
     "  - Gruppieren Sie die Daten nach `insured_occupation` (Beruf des Versicherten) und zeigen Sie die mittlere Höhe des `injury_claim` (Körperschaden) an.\n",
-    "  - Finden Sie den durchschnittlichen `property_claim` (Sachschaden) nach `auto_make` (Autohersteller).\n",
-    "\n",
+    "  - Finden Sie den durchschnittlichen `property_claim` (Sachschaden) nach `auto_make` (Autohersteller)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_claim_by_state = schaden_df.groupby('incident_state')['total_claim_amount'].mean()\n",
+    "print(avg_claim_by_state)\n",
+    "avg_injury_claim_by_occupation = schaden_df.groupby('insured_occupation')['injury_claim'].mean()\n",
+    "print(avg_injury_claim_by_occupation)\n",
+    "avg_property_claim_by_auto_make = schaden_df.groupby('auto_make')['property_claim'].mean()\n",
+    "print(avg_property_claim_by_auto_make)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Umgang mit fehlenden Daten\n",
     "- **Aufgabe**: Behandeln Sie fehlende Daten.\n",
     "  - Finden Sie heraus, in welchen Spalten fehlende Werte (`NaN`) vorhanden sind.\n",
     "  - Zählen Sie die fehlenden Werte in der Spalte `authorities_contacted`.\n",
-    "  - Füllen Sie die fehlenden Werte in der Spalte `authorities_contacted` mit dem Wert \"Not Contacted\".\n",
+    "  - Füllen Sie die fehlenden Werte in der Spalte `authorities_contacted` mit dem Wert \"Not Contacted\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_values = schaden_df.isnull().sum()\n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "missing_authorities_contacted = schaden_df['authorities_contacted'].isnull().sum()\n",
+    "print(f\"Fehlende Werte in 'authorities_contacted': {missing_authorities_contacted}\")\n",
+    "schaden_df['authorities_contacted'].fillna('Not Contacted', inplace=True)\n",
+    "print(f\"Fehlende Werte in 'authorities_contacted': {missing_authorities_contacted}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Zeitbasierte Analysen\n",
     "- **Aufgabe**: Arbeiten Sie mit Zeitdaten.\n",
     "  - Konvertieren Sie die Spalte `incident_date` in das Datumsformat (`datetime`).\n",
     "  - Finden Sie heraus, in welchem Monat die meisten Vorfälle stattgefunden haben.\n",
-    "  - Zeigen Sie alle Vorfälle an, die zwischen dem 15.02.2015 und dem 28.02.2015 gemeldet wurden.\n"
+    "  - Zeigen Sie alle Vorfälle an, die zwischen dem 15.02.2015 und dem 28.02.2015 gemeldet wurden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spalte konvertieren\n",
+    "schaden_df['incident_date'] = pd.to_datetime(schaden_df['incident_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schaden_df['incident_month'] = schaden_df['incident_date'].dt.month\n",
+    "most_incidents_month = schaden_df['incident_month'].value_counts().idxmax()\n",
+    "print(f\"Der Monat mit den meisten Vorfällen ist: {most_incidents_month}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = '2015-02-15'\n",
+    "end_date = '2015-02-28'\n",
+    "filtered_incidents = schaden_df[(schaden_df['incident_date'] >= start_date) & (schaden_df['incident_date'] <= end_date)]\n",
+    "print(filtered_incidents)"
    ]
   },
   {
@@ -908,28 +1107,193 @@
     "## Aufgaben: Analysen zum Titanic-Datensatz\n",
     "\n",
     "1. **Wer war der jüngste Passagier?**  \n",
-    "   Ermitteln Sie das Alter des jüngsten Passagiers an Bord der Titanic. Nutzen Sie dafür die Spalte `Age`. Was können Sie über diesen Passagier noch herausfinden?\n",
-    "\n",
+    "   Ermitteln Sie das Alter des jüngsten Passagiers an Bord der Titanic. Nutzen Sie dafür die Spalte `Age`. Was können Sie über diesen Passagier noch herausfinden?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic_df = pd.read_csv(\"./data/titanic_train.csv\")\n",
+    "titanic_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "youngest_passenger = titanic_df[ titanic_df[\"Age\"] == titanic_df[\"Age\"].min()]\n",
+    "youngest_passenger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. **Überlebensrate nach Geschlecht**  \n",
-    "   Untersuchen Sie, ob das Überleben auf der Titanic etwas mit dem Geschlecht der Passagiere zu tun hatte. Berechnen Sie die Überlebensrate für Männer und Frauen getrennt. Nutzen Sie hierfür die Spalten `Survived` und `Sex`.\n",
+    "   Untersuchen Sie, ob das Überleben auf der Titanic etwas mit dem Geschlecht der Passagiere zu tun hatte. Berechnen Sie die Überlebensrate für Männer und Frauen getrennt. Nutzen Sie hierfür die Spalten `Survived` und `Sex`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Berechnung der Überlebensrate nach Geschlecht\n",
+    "ueberlebensrate_nach_geschlecht = titanic_df.groupby('Sex')['Survived'].mean()\n",
     "\n",
+    "# Ausgabe der Überlebensrate für Männer und Frauen\n",
+    "print(ueberlebensrate_nach_geschlecht)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. **Überlebenschancen in den verschiedenen Klassen**  \n",
-    "   Hat die Klasse, in der ein Passagier gereist ist, einen Einfluss auf die Überlebenschancen? Berechnen Sie die Überlebensrate für jede der drei Klassen (`Pclass`) und interpretieren Sie das Ergebnis.\n",
+    "   Hat die Klasse, in der ein Passagier gereist ist, einen Einfluss auf die Überlebenschancen? Berechnen Sie die Überlebensrate für jede der drei Klassen (`Pclass`) und interpretieren Sie das Ergebnis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Berechnung der Überlebensrate nach Passagierklasse\n",
+    "ueberlebensrate_nach_klasse = titanic_df.groupby('Pclass')['Survived'].mean()\n",
     "\n",
+    "# Ausgabe der Überlebensrate für jede Klasse\n",
+    "print(ueberlebensrate_nach_klasse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. **Durchschnittliche Ticketpreise pro Klasse**  \n",
-    "   Finden Sie heraus, wie viel Passagiere durchschnittlich in den einzelnen Klassen für ihr Ticket bezahlt haben. Verwenden Sie die Spalten `Pclass` und `Fare`, um die durchschnittlichen Ticketpreise zu berechnen.\n",
-    "\n",
+    "   Finden Sie heraus, wie viel Passagiere durchschnittlich in den einzelnen Klassen für ihr Ticket bezahlt haben. Verwenden Sie die Spalten `Pclass` und `Fare`, um die durchschnittlichen Ticketpreise zu berechnen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Berechnung durchschnittlicher Preis nach Ticketklasse\n",
+    "preis_nach_klasse = titanic_df.groupby(\"Pclass\")[\"Fare\"].mean()\n",
+    "print(preis_nach_klasse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. **Größte Familien an Bord**  \n",
-    "   Finden Sie heraus, wie viele Geschwister und Elternteile (Spalten `SibSp` und `Parch`) die Passagiere an Bord hatten. Wer reiste mit der größten Familie?\n",
+    "   Finden Sie heraus, wie viele Geschwister und Elternteile (Spalten `SibSp` und `Parch`) die Passagiere an Bord hatten. Wer reiste mit der größten Familie?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Berechnung der Gesamtanzahl der Familienmitglieder\n",
+    "titanic_df['Familiengroesse'] = titanic_df['SibSp'] + titanic_df['Parch']\n",
     "\n",
+    "# Finden des Passagiers mit der größten Familie\n",
+    "groesste_familie = titanic_df.loc[titanic_df['Familiengroesse'].idxmax()]\n",
+    "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "print(\"Passagier mit der größten Familie:\")\n",
+    "print(groesste_familie[['Name', 'SibSp', 'Parch', 'Familiengroesse']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. **Wo sind die meisten Passagiere zugestiegen?**  \n",
-    "   Untersuchen Sie, an welchem Hafen (`Embarked`) die meisten Passagiere zugestiegen sind. \n",
+    "   Untersuchen Sie, an welchem Hafen (`Embarked`) die meisten Passagiere zugestiegen sind. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zählen der Passagiere an jedem Hafen\n",
+    "embarked_counts = titanic_df['Embarked'].value_counts()\n",
     "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "print(\"Passagiere nach Einschiffungshafen:\")\n",
+    "print(embarked_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7. **Verteilung der Altersgruppen**  \n",
-    "   Teilen Sie die Passagiere in verschiedene Altersgruppen ein (z.B. Kinder, Jugendliche, Erwachsene, Senioren) und untersuchen Sie, wie sich diese Gruppen auf die Überlebensrate auswirken.\n",
+    "   Teilen Sie die Passagiere in verschiedene Altersgruppen ein (z.B. Kinder, Jugendliche, Erwachsene, Senioren) und untersuchen Sie, wie sich diese Gruppen auf die Überlebensrate auswirken."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition der Altersgruppen\n",
+    "bins = [0, 3, 12, 18, 60, 120]  # Altersgrenzen für die Gruppen\n",
+    "labels = ['Kleinkinder', 'Kinder', 'Jugendliche', 'Erwachsene', 'Senioren']  # Label für die Gruppen\n",
     "\n",
+    "# Erstellen einer neuen Spalte 'AgeGroup' mit den Altersgruppen\n",
+    "titanic_df['AgeGroup'] = pd.cut(titanic_df['Age'], bins=bins, labels=labels, right=False)\n",
+    "\n",
+    "# Berechnen der Überlebensrate für jede Altersgruppe\n",
+    "survival_rate_by_age_group = titanic_df.groupby('AgeGroup')['Survived'].mean()\n",
+    "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "print(\"Überlebensrate nach Altersgruppen:\")\n",
+    "print(survival_rate_by_age_group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "8. **Wertvollstes Ticket an Bord**  \n",
     "   Finden Sie heraus, welches das teuerste Ticket (`Fare`) auf der Titanic war und wer dieses gekauft hat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finde den Index des teuersten Tickets\n",
+    "max_fare_index = titanic_df['Fare'].idxmax()\n",
+    "\n",
+    "# Informationen zum Passagier mit dem teuersten Ticket abrufen\n",
+    "most_expensive_ticket = titanic_df.loc[max_fare_index]\n",
+    "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "print(\"Das teuerste Ticket hatte folgenden Passagier:\")\n",
+    "print(f\"Name: {most_expensive_ticket['Name']}\")\n",
+    "print(f\"Ticketpreis: {most_expensive_ticket['Fare']}\")\n",
+    "print(f\"Passagierklasse: {most_expensive_ticket['Pclass']}\")\n",
+    "print(f\"Geschlecht: {most_expensive_ticket['Sex']}\")\n",
+    "print(f\"Alter: {most_expensive_ticket['Age']}\")\n"
    ]
   }
  ],
