--- a/04_python_visualization.ipynb
+++ b/04_python_visualization.ipynb
@@ -369,7 +369,7 @@
     "   \n",
     "3. **Kreisdiagramm (Pie Chart)**: Erstellen Sie ein Kreisdiagramm, das die Verteilung der Schadensmeldungen auf die Regionen visualisiert. Verwenden Sie geeignete Farben und fügen Sie eine Legende hinzu.\n",
     "\n",
-    "4. **Streudiagramm (Scatterplot)**: Visualisieren Sie den Zusammenhang zwischen der Schadenhöhe und der Anzahl der Tage seit dem Versicherungsbeginn. Passen Sie an:\n",
+    "4. **Streudiagramm (Scatterplot)**: Visualisieren Sie den Zusammenhang zwischen der Schadenhöhe und der Anzahl der Tage seit dem Versicherungsbeginn (1.1.2020). Passen Sie an:\n",
     "   - Farben der Punkte nach der Region.\n",
     "   - Setzen Sie Markierungen für die Datenpunkte.\n",
     "   - Fügen Sie Titel und Achsenbeschriftungen hinzu.\n",
