--- a/02a_python_object.ipynb
+++ b/02a_python_object.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Python für Aktuare Teil 2\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/02a_python_object.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/02a_python_object.ipynb)\n",
     "\n",
     "## Agenda\n",
     "Innerhalb dieses Notebooks behandeln wir:\n",
