--- a/02b_python_objects.ipynb
+++ b/02b_python_objects.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Python für Aktuare Teil 2\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/02b_python_object.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/02b_python_object.ipynb)\n",
     "## Agenda\n",
     "Innerhalb dieses Notebooks behandeln wir:\n",
     "- Zeichenketten (Strings)\n",
@@ -880,8 +881,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
