--- a/03_python_pandas.ipynb
+++ b/03_python_pandas.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Python für Aktuare Teil 3\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/03_python_pandas.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/03_python_pandas.ipynb)\n",
     "## Agenda\n",
     "Innerhalb dieses Notebooks behandeln wir:\n",
     "- Pandas Einführung\n",
