--- a/04_python_visualization.ipynb
+++ b/04_python_visualization.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Python für Aktuare Teil 4\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/04_python_visualization.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/04_python_visualization.ipynb)\n",
     "## Agenda\n",
     "Innerhalb dieses Notebooks behandeln wir:\n",
     "- Einführung in Matplotlib\n",
