--- a/05_python_machinelearning.ipynb
+++ b/05_python_machinelearning.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Python für Aktuare Teil 5\n",
-    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/05_python_machinelearning.ipynb) [![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/blob/main/05_python_machinelearning.ipynb)\n",
     "## Agenda\n",
     "Innerhalb dieses Notebooks behandeln wir:\n",
     "- Einführung in maschinelles Lernen:\n",
