--- a/05_python_machinelearning.ipynb
+++ b/05_python_machinelearning.ipynb
@@ -61,9 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Alter      Prämie\n",
+      "0     56  572.432323\n",
+      "1     69  753.321786\n",
+      "2     46  723.630511\n",
+      "3     32  429.327933\n",
+      "4     60  847.604259\n"
+     ]
+    }
+   ],
    "source": [
     "# Import der benötigten Bibliotheken\n",
     "import numpy as np\n",
@@ -352,14 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load data\n",
+    "# load data locally\n",
     "weather_data = pd.read_csv('./data/weather_data.csv',parse_dates=['Date'])\n",
     "finance_data = pd.read_csv('./data/financial_data.csv',parse_dates=['Date'])\n",
-    "claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])"
+    "claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])\n",
+    "# from remote server\n",
+    "#weather_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv',parse_dates=['Date'])\n",
+    "#finance_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/financial_data.csv',parse_dates=['Date'])\n",
+    "#claims_data  = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/claims_data.csv',parse_dates=['Date'])"
    ]
   },
   {
