remote data + style changes

--- a/01b_python_basics.ipynb
+++ b/01b_python_basics.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "# Verwendung von `import` in Python\n",
     "\n",
-    "In Python ermöglicht der Befehl `import` das Einfügen von Modulen in dein Programm. Ein Modul ist eine Datei, die Python-Code enthält und Funktionen, Klassen und Variablen definiert. Durch das Importieren von Modulen kannst du auf die Funktionen und Klassen zugreifen, die in diesen Modulen definiert sind, ohne sie selbst neu schreiben zu müssen.\n",
+    "In Python ermöglicht der Befehl `import` das Einfügen von Modulen in dein Programm. Ein Modul ist eine Datei, die Python-Code enthält und Funktionen, Klassen und Variablen definiert. Durch das Importieren von Modulen kann man auf die Funktionen und Klassen zugreifen, die in diesen Modulen definiert sind, ohne sie selbst neu schreiben zu müssen.\n",
     "\n",
     "## Importieren eines gesamten Moduls\n",
     "\n",
@@ -526,7 +526,7 @@
     "    - Wenn man einer Variablen einen Wert zuweist, erstellt Python automatisch ein Objekt im Speicher, das diesen Wert enthält, und die Variable verweist darauf.\n",
     "    - Python unterscheidet zwischen **mutable** (veränderbaren) und **immutable** (unveränderbaren) Objekten:\n",
     "        - Mutable Objekte (wie Listen oder Dictionaries) können nach der Zuweisung verändert werden.\n",
-    "        - Immutable Objekte (wie Strings, Tupel und Zahlen) können nicht verändert werden. Wenn du beispielsweise einer bestehenden Variablen einen neuen Wert zuweist, erstellt Python ein neues Objekt und weist der Variablen die neue Speicheradresse zu.\n",
+    "        - Immutable Objekte (wie Strings, Tupel und Zahlen) können nicht verändert werden. Wenn man beispielsweise einer bestehenden Variablen einen neuen Wert zuweist, erstellt Python ein neues Objekt und weist der Variablen die neue Speicheradresse zu.\n",
     "\n",
     "2. **Referenzzähler**:\n",
     "    - Python verwendet ein **Referenzzählersystem**, um zu verfolgen, wie viele Variablen auf ein bestimmtes Objekt zeigen. Wenn der Zähler für ein Objekt auf **0** fällt (das heißt, es gibt keine Verweise mehr darauf), wird der Speicher automatisch freigegeben.\n",
@@ -535,7 +535,7 @@
     "    - Python hat eine automatische **Garbage Collection**, die den nicht mehr benötigten Speicherplatz aufräumt. Sie basiert hauptsächlich auf dem Referenzzählersystem, um zu entscheiden, wann Objekte gelöscht werden sollten.\n",
     "\n",
     "4. **Speicherfreigabe mit `del`**:\n",
-    "    - Mit der **`del`-Anweisung** kannst man explizit den Verweis auf ein Objekt löschen, wodurch dessen Referenzzähler reduziert wird. Wenn keine weiteren Verweise auf das Objekt bestehen, wird es aus dem Speicher entfernt.\n"
+    "    - Mit der **`del`-Anweisung** kann man explizit den Verweis auf ein Objekt löschen, wodurch dessen Referenzzähler reduziert wird. Wenn keine weiteren Verweise auf das Objekt bestehen, wird es aus dem Speicher entfernt.\n"
    ]
   },
   {
