--- a/02a_python_object.ipynb
+++ b/02a_python_object.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "### Beispiel:\n",
     "\n",
-    "Wenn du ein Objekt der Klasse `Versicherungsnehmer` mit den Daten eines Versicherungsnehmers erstellst, sollte der Aufruf der Methode `vertragsdetails_anzeigen()` folgendes Ergebnis liefern:\n",
+    "Wenn man ein Objekt der Klasse `Versicherungsnehmer` mit den Daten eines Versicherungsnehmers erstellst, sollte der Aufruf der Methode `vertragsdetails_anzeigen()` folgendes Ergebnis liefern:\n",
     "\n",
     "```plaintext\n",
     "Versicherungsnehmer: Anna Müller\n",
