--- a/05_python_machinelearning.ipynb
+++ b/05_python_machinelearning.ipynb
@@ -359,7 +359,13 @@
     "# load data\n",
     "weather_data = pd.read_csv('./data/weather_data.csv',parse_dates=['Date'])\n",
     "finance_data = pd.read_csv('./data/financial_data.csv',parse_dates=['Date'])\n",
-    "claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])"
+    "claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])\n",
+    "# from remote server\n",
+    "#weather_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv',parse_dates=['Date'])\n",
+    "#finance_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/financial_data.csv',parse_dates=['Date'])\n",
+    "#claims_data  = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/claims_data.csv',parse_dates=['Date'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
