data from server added

--- a/03_python_pandas.ipynb
+++ b/03_python_pandas.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,6 +754,27 @@
     "# Schreiben des DataFrames in eine Excel-Datei\n",
     "df_excel.to_excel('dateipfad/zur_neuen_datei.xlsx', sheet_name='Tabelle1', index=False)\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dateien von nicht lokalen Quellen einlesen\n",
+    "\n",
+    "Man kann mit `pandas`aus sehr einfach Datenquellen einlesen, die nicht lokal sondern \"irgendwo\" im Internet, bzw. auf einem Server liegen. Man dazu nur die URL zum Speicherort der Datei angeben. \n",
+    "\n",
+    "Beispielsweise können wir so die Dateien im github-Repository einlesen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv')\n",
+    "data.head()"
    ]
   },
   {
