--- a/02b_python_objects.ipynb
+++ b/02b_python_objects.ipynb
@@ -582,7 +582,7 @@
     "    'Superman':  'Clark Kent',\n",
     "    'Batman':    'Bruce Wayne',\n",
     "    'Spiderman': 'Peter Parker',\n",
-    "    'Wonder Woman' : 'Diana Prince'\n",
+    "    'Wonder Woman' : 'Diana Prince',\n",
     "    'Ironman':   'Tony Stark'\n",
     "}"
    ]
