added online link to data sets

--- a/03_python_pandas.ipynb
+++ b/03_python_pandas.ipynb
@@ -892,6 +892,9 @@
     "  - Nutzen Sie `info()`, um Informationen über die Datentypen und die Anzahl der Einträge zu erhalten.\n",
     "  - Zeigen Sie eine Zusammenfassung der numerischen Spalten mit `describe()`.\n",
     "\n",
+    "*Hinweis* Der Link auf den Onlinespeicherort der Daten lautet:\n",
+    "https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/completed/data/car_insurance_claims.csv\n",
+    "\n",
     "2. Spaltenzugriff und einfache Berechnungen\n",
     "- **Aufgabe**: Arbeiten Sie mit einzelnen Spalten.\n",
     "  - Zeigen Sie die durchschnittliche Höhe der `total_claim_amount` (Gesamtforderung).\n",
@@ -928,6 +931,9 @@
    "metadata": {},
    "source": [
     "## Aufgaben: Analysen zum Titanic-Datensatz\n",
+    "\n",
+    "*Hinweis* Der Link auf den Onlinespeicherort der Daten lautet:\n",
+    "https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/completed/data/titanic_train.csv\n",
     "\n",
     "1. **Wer war der jüngste Passagier?**  \n",
     "   Ermitteln Sie das Alter des jüngsten Passagiers an Bord der Titanic. Nutzen Sie dafür die Spalte `Age`. Was können Sie über diesen Passagier noch herausfinden?\n",
