--- a/05_python_machinelearning.ipynb
+++ b/05_python_machinelearning.ipynb
@@ -352,18 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data locally\n",
-    "weather_data = pd.read_csv('./data/weather_data.csv',parse_dates=['Date'])\n",
-    "finance_data = pd.read_csv('./data/financial_data.csv',parse_dates=['Date'])\n",
-    "claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])\n",
+    "#weather_data = pd.read_csv('./data/weather_data.csv',parse_dates=['Date'])\n",
+    "#finance_data = pd.read_csv('./data/financial_data.csv',parse_dates=['Date'])\n",
+    "#claims_data = pd.read_csv('./data/claims_data.csv',parse_dates=['Date'])\n",
     "# from remote server\n",
-    "#weather_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv',parse_dates=['Date'])\n",
-    "#finance_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/financial_data.csv',parse_dates=['Date'])\n",
-    "#claims_data  = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/claims_data.csv',parse_dates=['Date'])"
+    "weather_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/weather_data.csv',parse_dates=['Date'])\n",
+    "finance_data = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/financial_data.csv',parse_dates=['Date'])\n",
+    "claims_data  = pd.read_csv('https://raw.githubusercontent.com/DeutscheAktuarvereinigung/Python_fuer_Aktuare/refs/heads/main/data/claims_data.csv',parse_dates=['Date'])"
    ]
   },
   {
